# vllm-ascend

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY_SHARED_POOL.md  SHARED_POOL_COMPARISON.md  run_shmem_benchmark.sh  setup.py
csrc/: camem_allocator.cpp  shmem_allocator.cpp
docs/source/user_guide/feature_guide/: index.md  laps_scheduler.md  shared_cpu_memory_pool.md  shared_cpu_memory_pool_multiprocess.md  sleep_mode.md
examples/: offline_inference_sleep_mode_multiprocess.py  offline_inference_sleep_mode_shared_pool.py
examples/disaggregated_prefill_v1/: analyze_distribution.py  build_prepared_claude_dataset.py  run_laps_claude_benchmark_glm5_single_node_prefill.sh  run_laps_sharegpt_benchmark_glm5_2node.sh  run_laps_sharegpt_benchmark_glm5_single_node_prefill.sh  run_laps_sharegpt_multiturn_benchmark.sh  vllm_bench_claude.py
tests/ut/: test_platform.py
tests/ut/attention/: test_attention_v1.py
tests/ut/compilation/: test_acl_graph.py
tests/ut/core/: test_laps_budget_context.py  test_laps_scheduler.py
tests/ut/device_allocator/: test_camem.py  test_shared_cpu_pool.py
tests/ut/kv_connector/: test_remote_prefill_lifecycle.py
tests/ut/patch/platform/: test_patch_laps_scheduler.py
tests/ut/worker/: test_aclgraph_utils_v2.py  test_model_runner_v1.py  test_model_runner_v2.py
vllm_ascend/: __init__.py  cpu_binding.py  envs.py  platform.py
vllm_ascend/attention/: attention_v1.py
vllm_ascend/compilation/: acl_graph.py
vllm_ascend/core/: laps_scheduler.py  recompute_scheduler.py  schedule_template.py
vllm_ascend/device_allocator/: README.md  README_zh.md  __init__.py  acl_direct_allocator.py  camem.py  shared_cpu_pool.py  shared_cpu_pool_multiprocess.py  shmem_allocator.py
vllm_ascend/patch/: __init__.py
vllm_ascend/patch/platform/: patch_kv_cache_interface.py
vllm_ascend/sample/: sampler.py
vllm_ascend/worker/: model_runner_v1.py  worker.py
vllm_ascend/worker/v2/: aclgraph_utils.py  block_table.py  input_batch.py  model_runner.py
vllm_ascend/worker/v2/model_states/: default.py
